updated: - when we click on Open button code will check if it should close preview;

--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Service\Dialogs\Message\MessageView.xaml.cs">
       <DependentUpon>MessageView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Service\FileExestensionsHelper.cs" />
     <Compile Include="Service\HelperConst.cs" />
     <Compile Include="Service\ContactSuggestingService.cs" />
     <Compile Include="Service\KeyDownBehavior.cs" />
