updated: - fixed Reply,ReplyAll, Forward for MeetingItems; - download progress window will appear during installation process; - new version;

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -37,7 +37,7 @@
             </setting>
             <!-- If download window will be shown (required)-->
             <setting name="showDownloaderWindow" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <!--Absolute path to folder where was installed Add-In Express toolkit (required)-->
             <setting name="AddInExpressBinFolderPath" serializeAs="String">
