--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -77,9 +77,7 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
       <HintPath>..\Toolkits\Interop\Word\Microsoft.Office.Interop.Word.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.Prism">
-      <HintPath>..\Toolkits\Prism\Microsoft.Practices.Prism.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.Practices.Prism, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Office, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -138,15 +136,15 @@
     <Compile Include="Controls\ImageControl\ZoomPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\Office\BaseOfficeWindow.cs" />
-    <Compile Include="Controls\Office\ExcelWindow.cs" />
+    <Compile Include="Controls\Office\BaseOfficePreview.cs" />
+    <Compile Include="Controls\Office\ExcelPreview.cs" />
     <Compile Include="Controls\Office\OfficeFilePreview.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\Office\OfficeFilePreview.Designer.cs">
       <DependentUpon>OfficeFilePreview.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\Office\OfficeWindowFactory.cs" />
+    <Compile Include="Controls\Office\OfficePreviewFactory.cs" />
     <Compile Include="Controls\Office\OutlookFilePreview.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -160,7 +158,7 @@
     <Compile Include="Controls\Office\WebUtils\ExtWebBrowserEventHelper.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\Office\WordWindow.cs" />
+    <Compile Include="Controls\Office\WordPreview.cs" />
     <Compile Include="Controls\PdfControl\PageViewer.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -252,7 +250,6 @@
     <Compile Include="Service\CsvHelper\CSV.cs" />
     <Compile Include="Service\CsvHelper\CSVReader.cs" />
     <Compile Include="Service\CsvHelper\CSVWriter.cs" />
-    <Compile Include="Service\Logger\WSSqlLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Controls\Calendar\CalendarIcsPreview.resx">
@@ -290,9 +287,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="log4net.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="Resources\TreeView_XP_Explorer_ParentNode.gif" />
     <None Include="WSUIPreview.snk" />
   </ItemGroup>
