--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -146,7 +146,7 @@
     </Compile>
     <Compile Include="Controls\Office\OfficePreviewFactory.cs" />
     <Compile Include="Controls\Office\OutlookFilePreview.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\Office\OutlookFilePreview.Designer.cs">
       <DependentUpon>OutlookFilePreview.cs</DependentUpon>
