--- a/WSPreview/WSPreview.csproj
+++ b/WSPreview/WSPreview.csproj
@@ -109,7 +109,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\Calendar\CalendarIcsPreview.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\Calendar\CalendarIcsPreview.Designer.cs">
       <DependentUpon>CalendarIcsPreview.cs</DependentUpon>
