--- a/WSUI.Core/WSUI.Core.csproj
+++ b/WSUI.Core/WSUI.Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Interfaces\IWSAction.cs" />
     <Compile Include="Logger\WSSqlLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Win32\WindowsFunction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="log4net.config">
