--- a/WSUI.Core/WSUI.Core.csproj
+++ b/WSUI.Core/WSUI.Core.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Data\AttachmentSearchObject.cs" />
     <Compile Include="Data\BaseEmailSearchObject.cs" />
     <Compile Include="Data\BaseSearchObject.cs" />
+    <Compile Include="Data\CommandSearchObject.cs" />
     <Compile Include="Data\ContactSearchObject.cs" />
     <Compile Include="Data\EmailContactSearchObject.cs" />
     <Compile Include="Data\EmailSearchObject.cs" />
