updated: - added new general rule for contacts (GeneralContactRule) (for fixing #107);

--- a/WSUI.Infrastructure/WSUI.Infrastructure.csproj
+++ b/WSUI.Infrastructure/WSUI.Infrastructure.csproj
@@ -92,6 +92,7 @@
     </Compile>
     <Compile Include="Converters\StringToStringConverter.cs" />
     <Compile Include="Implements\Rules\EmailContactSearchRule.cs" />
+    <Compile Include="Implements\Rules\GeneralContactRule.cs" />
     <Compile Include="Implements\Systems\AllSearchSystem.cs" />
     <Compile Include="Implements\Rules\AttachmentFilenameSearchRule.cs" />
     <Compile Include="Implements\Systems\AttachmentSearchSystem.cs" />
