updated: - added managers for ribbon and command bar; - added close button on main UI; - some improvements;

--- a/WSUI.Control/WSUI.Control.csproj
+++ b/WSUI.Control/WSUI.Control.csproj
@@ -81,6 +81,7 @@
     <Compile Include="..\Version.cs">
       <Link>Properties\Version.cs</Link>
     </Compile>
+    <Compile Include="Interfaces\IWSMainControl.cs" />
     <Compile Include="IPluginBootStraper.cs" />
     <Compile Include="PluginBootStraper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
