updated: - fixed cheking of license; - fixed the close button according new style;

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -17,7 +17,7 @@
             </setting>
             <!-- url where we will deploy out project (required) -->
             <setting name="installationUrl" serializeAs="String">
-                <value>http://readyshare.routerlogin.net/shares/shares/downloads/clicktwice/</value>
+                <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/</value>
             </setting>
             <!-- Absolute path to installer sertificate (required) -->
             <setting name="certificateFile" serializeAs="String">
