--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -7,59 +7,45 @@
 </configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
         <WSADXPublisher.Properties.Settings>
-            <!--Absolute path to MSI installer (required)-->
             <setting name="installerFile" serializeAs="String">
-                <value>h:\Visual\WORK\WSUI\solution\ROutput\WSUI.OutlookPluginSetup.msi</value>
+                <value>h:\Visual\WORK\WSUI\solution\ROutput\OutlookFinderSetup.msi</value>
             </setting>
-            <!--Absolute path to folder, where we store temp files for deploying (required)-->
             <setting name="publishingLocation" serializeAs="String">
                 <value>h:\Visual\WORK\WSUI\solution\Clicktwice</value>
             </setting>
-            <!-- url where we will deploy out project (required) -->
             <setting name="installationUrl" serializeAs="String">
                 <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/</value>
             </setting>
-            <!-- Absolute path to installer sertificate (required) -->
             <setting name="certificateFile" serializeAs="String">
                 <value>h:\Visual\WORK\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</value>
             </setting>
-            <!-- absolute path to icon for installer (required)-->
             <setting name="iconFileName" serializeAs="String">
                 <value>h:\Visual\WORK\WSUI\solution\WSUI\Search.ico</value>
             </setting>
-            <!-- If UI while installing will be shown (required) False - will be shown, False - otherwise -->
             <setting name="quietModeDuringInstall" serializeAs="String">
                 <value>False</value>
             </setting>
-            <!-- IF Full UI will be shown while unistall (True - quiet mode (not shown), False - will be shown) (required)-->
             <setting name="quietModeDuringUninstall" serializeAs="String">
                 <value>True</value>
             </setting>
-            <!-- If download window will be shown (required)-->
             <setting name="showDownloaderWindow" serializeAs="String">
                 <value>True</value>
             </setting>
-            <!--Absolute path to folder where was installed Add-In Express toolkit (required)-->
             <setting name="AddInExpressBinFolderPath" serializeAs="String">
                 <value>C:\Program Files (x86)\Add-in Express\Add-in Express for .NET\Bin\</value>
             </setting>
-            <!-- Name of settings file, which we should set up before deploying and clear after it (required)-->
             <setting name="ADXPublisherConfigFilename" serializeAs="String">
                 <value>adxpublisher.exe.config</value>
             </setting>
-            <!--  Downloader filename (required) -->
             <setting name="downloaderFileName" serializeAs="String">
-                <value>wsui.outlookplugin.exe</value>
+                <value>outlookfinder.exe</value>
             </setting>
-            <!-- target framework which use out project (required)  -->
             <setting name="targetFrameworkVersion" serializeAs="String">
                 <value>v4.0.30319</value>
             </setting>
-            <!-- Programs name who will be closed durring install (required) -->
             <setting name="targetApplicationNames" serializeAs="String">
-              <value>Outlook</value>
+                <value />
             </setting>
-            <!--show warnings durring installation (required)-->
             <setting name="showRunningApplicationsWarning" serializeAs="String">
                 <value>False</value>
             </setting>
