--- a/WSADXPublisher/app.config
+++ b/WSADXPublisher/app.config
@@ -8,7 +8,7 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
         <WSADXPublisher.Properties.Settings>
             <setting name="installerFile" serializeAs="String">
-                <value>C:\Users\Vincent\Documents\GitHub\WSUI\solution\ROutput\WSUI.OutlookPluginSetup.msi</value>
+                <value>C:\Users\Vincent\Documents\GitHub\WSUI\solution\ROutput\OutlookFinderSetup.msi</value>
             </setting>
             <setting name="publishingLocation" serializeAs="String">
                 <value>C:\Users\Vincent\Documents\GitHub\WSUI\solution\Clicktwice</value>
@@ -29,7 +29,7 @@
                 <value>True</value>
             </setting>
             <setting name="showDownloaderWindow" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="AddInExpressBinFolderPath" serializeAs="String">
                 <value>C:\Program Files (x86)\Add-in Express\Add-in Express for .NET\Bin\</value>
@@ -38,7 +38,7 @@
                 <value>adxpublisher.exe.config</value>
             </setting>
             <setting name="downloaderFileName" serializeAs="String">
-                <value>wsui.outlookplugin.exe</value>
+                <value>outlookfinder.exe</value>
             </setting>
             <setting name="targetFrameworkVersion" serializeAs="String">
                 <value>v4.0.30319</value>
