updated: - changed the version of NEt Framework. From now all project use Net Framework 4.0 Client Profile;

--- a/WSGen/app.config
+++ b/WSGen/app.config
@@ -40,4 +40,4 @@
             </setting>
         </WSGen.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
