--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
 <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="WSADXPublisher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <section name="WSADXPublisher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup><applicationSettings>
         <WSADXPublisher.Properties.Settings>
             <setting name="installerFile" serializeAs="String">
                 <value>h:\Visual\WORK\WSUI\solution\ROutput\OutlookFinderSetup.msi</value>
@@ -44,7 +44,7 @@
                 <value>v4.0.30319</value>
             </setting>
             <setting name="targetApplicationNames" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="showRunningApplicationsWarning" serializeAs="String">
                 <value>False</value>
