--- a/WSGen/WSGen.csproj
+++ b/WSGen/WSGen.csproj
@@ -11,8 +11,7 @@
     <RootNamespace>WSGen</RootNamespace>
     <AssemblyName>wsgen</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
